os/bluestore/BlueStore.cc: merge overlapping/adjacent regions before read

Fixes: http://tracker.ceph.com/issues/36625
Signed-off-by: Yang Honggang <yanghonggang@umcloud.com>
(cherry picked from commit a86d5606354be41715760477a9219a14a7fb92cd)
Signed-off-by: Jonathan Brielmaier <jbrielmaier@suse.de>

Conflicts:
src/os/bluestore/BlueStore.cc:
	* use assert instead of ceph_assert
	* don't include handler for kernel bug
src/test/objectstore/store_test.cc:
	* use old g_conf->set_val syntax
	* osr instead of "auto ch"
	* use apply_transaction()
	* in HAVE_LIBAIO directive, not in WITH_BLUESTORE